--- a/systemd/system/bugfind.service
+++ b/systemd/system/bugfind.service
@@ -8,7 +8,7 @@ User=nobody
 CapabilityBoundingSet=CAP_NET_ADMIN CAP_NET_BIND_SERVICE
 AmbientCapabilities=CAP_NET_ADMIN CAP_NET_BIND_SERVICE
 NoNewPrivileges=true
-ExecStart=/root/bugfind run -config /usr/local/etc/v2ray/%i.json
+ExecStart=/root/bugfind/bugfind -c /root/bugfind/conf.yaml
 Restart=on-failure
 RestartPreventExitStatus=23
 
